; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ehci-dbg.c_remove_debug_files.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ehci-dbg.c_remove_debug_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ehci_hcd = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ehci_hcd*)* @remove_debug_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_debug_files(%struct.ehci_hcd* %0) #0 {
  %2 = alloca %struct.ehci_hcd*, align 8
  store %struct.ehci_hcd* %0, %struct.ehci_hcd** %2, align 8
  %3 = load %struct.ehci_hcd*, %struct.ehci_hcd** %2, align 8
  %4 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @debugfs_remove(i32 %5)
  %7 = load %struct.ehci_hcd*, %struct.ehci_hcd** %2, align 8
  %8 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @debugfs_remove(i32 %9)
  %11 = load %struct.ehci_hcd*, %struct.ehci_hcd** %2, align 8
  %12 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @debugfs_remove(i32 %13)
  %15 = load %struct.ehci_hcd*, %struct.ehci_hcd** %2, align 8
  %16 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @debugfs_remove(i32 %17)
  ret void
}

declare dso_local i32 @debugfs_remove(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
